Moved classes so that they can be grouped under respective namespaces. Renamed class Visualization to Scene.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ SET( SOURCE
   source/wave_spectrum.cpp
   source/sea_surface_dynamics.cpp
   source/sea_surface_actor.cpp
-  source/visualization.cpp
+  source/scene.cpp
 )
 
 # Additional source files for test build
