JONSWAP spectrum replaced with Bretschneider spectrum.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ INCLUDE_DIRECTORIES(
 SET( SOURCE
   source/regular_wave.c
   source/wave.c
+  source/wind.c
+  source/current.c
   source/main.c
   )
 
