Cleaned the test scripts

--- a/test/simulations/performance_wave_component_size_multithreading/CMakeLists.txt
+++ b/test/simulations/performance_wave_component_size_multithreading/CMakeLists.txt
@@ -28,7 +28,7 @@ ENDIF(ENABLE_MULTI_THREADING)
 # INCLUDE HEADER FILES DIRECTORIES
 # --------------------------------
 INCLUDE_DIRECTORIES(
-  ../../../../include
+  include
   ../../../../dependency/tomlc99
   )
 
