--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,9 +39,9 @@ SET( SOURCE
   source/regular_wave.c
   source/wave.c
   source/asv.c
+  source/pid_controller.c
   source/simulation.c
   source/main.c
-  #source/pid_controller.c
   )
 
 # PREPROCESSOR MACROS
