Fixed errors in controller.

--- a/example_input.toml
+++ b/example_input.toml
@@ -1,67 +1,24 @@
-# Comment lines, such as this line, start with a #.
-
 # Physical specification of the vehicle. 
-[spec]
-L_wl = 0.3
-B_wl = 0.3
-D = 0.3
-T = 0.1
-displacement = 0.007
-max_speed = 2.0
 
-# Center of gravity of the vehicle.
-[cog]
-x = 0.15
-y = 0.00
-z = -0.2
+[[asv]]
+id = "asv0"
+L_wl = 0.3 # m
+B_wl = 0.3 # m
+D = 0.3  # m
+T = 0.1 # m
+displacement = 0.007 # m3
+max_speed = 2.0 # m/s
+cog = [0.15, 0.0, -0.2] # [x(m), y(m), z(m)]
+radius_of_gyration = [0.08, 0.08, 0.106] # [r_roll(m), r_pitch(m), r_yaw(m)]
+thrusters = [[0.235, -0.085, -0.0485],
+			 [0.235, 0.085, -0.0485],
+			 [0.065, -0.085, -0.0485],
+			 [0.065, 0.085, -0.0485]] # [[x(m), y(m), z(m)]]
+asv_position = [1000.0, 1000.0] # [X(m), Y(m)]
+asv_attitude = [0.0, 0.0, 0.0] #[heel(deg), trim(deg), heading(deg)]
+waypoints = [[1000.0, 1100.0], [1100.0, 1100.0]] # [[X(m), Y(m)]]
 
-# Radius of gyration of the vehicle.
-[radius_of_gyration]
-roll = 0.08
-pitch = 0.08
-yaw = 0.106
-
-# Set the position of propellers. 
-# Here we set 4 propellers for the vehicle.
-# Propeller - 1 
-[[propeller]]
-x = 0.065
-y = -0.085
-z = -0.0485
-# Propeller - 2
-[[propeller]]
-x = 0.235
-y = -0.085
-z = -0.0485
-# Propeller - 3
-[[propeller]]
-x = 0.235
-y = 0.085
-z = -0.0485
-Propeller - 4
-[[propeller]]
-x = 0.065
-y = 0.085
-z = -0.0485
-
-# Initial position of the vehicle.
-[vehicle_position]
-x = 100.0
-y = 100.0
-
-# Initial floating attitude of the vehicle. 
-[vehicle_attitude]
-heel = 0
-trim = 0
-heading = 0
-
-# Define the waypoints for navigation. 
-[[waypoint]]
-x = 100.0
-y = 150.0
-
-
-# Following set of inputs are optional
-# Set the time step size for simulation.
-[clock]
-time_step_size = 40
+[visualisation]
+sea_surface_edge_length = 10.0 #m
+sea_surface_position = [1000.0, 1000.0] # Position of the bottom-left corner of the simulated surface.
+count_mesh_cells_along_edge = 10 # Number of mesh cells along one edge of the sea surface. A larger number means a finer sea surface mesh.
