--- a/cyclone/CMakeLists.txt
+++ b/cyclone/CMakeLists.txt
@@ -46,7 +46,7 @@ SET( SOURCE
 # cyclone source files
 SET( SOURCE
   ${SOURCE}
-  source/simple_nc4_rd.c
+  source/read_netcdf.c
   #source/simple_nc4_wr.c
 )
 
