Function to init the data for hs and dp.

--- a/cyclone/CMakeLists.txt
+++ b/cyclone/CMakeLists.txt
@@ -46,8 +46,7 @@ SET( SOURCE
 # cyclone source files
 SET( SOURCE
   ${SOURCE}
-  source/read_netcdf.c
-  #source/simple_nc4_wr.c
+  source/cyclone.c
 )
 
 # CREATE BINARIES
