Updated cmake to include cyclone source code.

--- a/wrapper/CMakeLists.txt
+++ b/wrapper/CMakeLists.txt
@@ -38,6 +38,7 @@ endif(ENABLE_EARTH_COORDINATES)
 # --------------------------------
 INCLUDE_DIRECTORIES(
   ../include
+  ../cyclone/include
   ../dependency/tomlc99
   include
   )
@@ -49,6 +50,7 @@ SET( INCLUDE
   ../include/wave.h 
   ../include/asv.h 
   ../include/pid_controller.h
+  ../cyclone/include/cyclone.h
 )
 
 # SOURCE FILES
@@ -60,6 +62,7 @@ SET( SOURCE
   ../source/wave.c
   ../source/asv.c
   ../source/pid_controller.c
+  ../cyclone/source/cyclone.c
   )
 
 # CREATE BINARIES
