--- a/wrapper/CMakeLists.txt
+++ b/wrapper/CMakeLists.txt
@@ -70,7 +70,7 @@ SET( SOURCE
 SET(TARGET_DIR ${PROJECT_SOURCE_DIR}/lib)
 ADD_LIBRARY(ASVLite-python SHARED ${INCLUDE} ${SOURCE})
 FIND_PACKAGE(Threads REQUIRED)
-TARGET_LINK_LIBRARIES(ASVLite-python m Threads::Threads)
+TARGET_LINK_LIBRARIES(ASVLite-python m Threads::Threads netcdf)
 SET_TARGET_PROPERTIES(ASVLite-python PROPERTIES
     VERSION ${PROJECT_VERSION}
     SOVERSION 1
