--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,13 +40,13 @@ ENDIF()
 
 # CREATE BINARIES
 # ---------------
-ADD_EXECUTABLE(asvlite ${SOURCE})
-SET_PROPERTY(TARGET asvlite PROPERTY C_STANDARD 11)
+ADD_EXECUTABLE(ASVLite ${SOURCE})
+SET_PROPERTY(TARGET ASVLite PROPERTY C_STANDARD 11)
 
 # LINK LIBRARIES 
 # --------------
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 IF(UNIX)
-  TARGET_LINK_LIBRARIES(asvlite m Threads::Threads)
+  TARGET_LINK_LIBRARIES(ASVLite m Threads::Threads)
 ENDIF()
